--- a/resources/scss/_headerMenu.scss
+++ b/resources/scss/_headerMenu.scss
@@ -221,3 +221,10 @@
     width: 100%;
     z-index: 99;
 }
+.top_message {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    text-align: center;
+}
