--- a/public/f/assets/bundle/mail.css
+++ b/public/f/assets/bundle/mail.css
@@ -1,109 +1,1 @@
-/* CLIENT-SPECIFIC STYLES*/
-/* RESET STYLES */
-/* iOS BLUE LINKS */
-/* MOBILE STYLES */
-#outlook a {
-  padding: 0;
-}
-
-.ReadMsgBody {
-  width: 100%;
-}
-
-.ExternalClass {
-  width: 100%;
-  line-height: 100%;
-}
-.ExternalClass p {
-  line-height: 100%;
-}
-.ExternalClass span {
-  line-height: 100%;
-}
-.ExternalClass font {
-  line-height: 100%;
-}
-.ExternalClass td {
-  line-height: 100%;
-}
-.ExternalClass div {
-  line-height: 100%;
-}
-
-body {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  height: 100% !important;
-  margin: 0;
-  padding: 0;
-  width: 100% !important;
-}
-
-table {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  mso-table-lspace: 0pt;
-  mso-table-rspace: 0pt;
-  border-collapse: collapse !important;
-}
-
-td {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  mso-table-lspace: 0pt;
-  mso-table-rspace: 0pt;
-}
-
-a {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-
-img {
-  -ms-interpolation-mode: bicubic;
-  boder: 0;
-  height: auto;
-  line-height: 100%;
-  outline: none;
-  text-decoration: none;
-}
-
-.apple-links a {
-  color: #999999;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 600px) {
-  td[class=logo] img {
-    margin: 0 auto !important;
-  }
-
-  table[class=wrapper] {
-    width: 100% !important;
-  }
-
-  td[class=mobile-image-pad] {
-    padding: 0 10px 0 10px !important;
-  }
-
-  td[class=mobile-title-pad] {
-    padding: 30px 10px 0 10px !important;
-  }
-
-  td[class=mobile-text-pad] {
-    padding: 10px 10px 10px 10px !important;
-  }
-
-  td[class=mobile-column-right] {
-    padding-top: 20px !important;
-  }
-
-  img[class=fluid-image] {
-    width: 100% !important;
-    height: auto !important;
-  }
-
-  td[class=hide] {
-    display: none !important;
-  }
-}
+#outlook a{padding:0}.ReadMsgBody{width:100%}.ExternalClass{width:100%}.ExternalClass,.ExternalClass div,.ExternalClass font,.ExternalClass p,.ExternalClass span,.ExternalClass td{line-height:100%}body{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;height:100%!important;margin:0;padding:0;width:100%!important}table{border-collapse:collapse!important}table,td{mso-table-lspace:0;mso-table-rspace:0}a,table,td{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}img{-ms-interpolation-mode:bicubic;boder:0;height:auto;line-height:100%;outline:none}.apple-links a,img{text-decoration:none}.apple-links a{color:#999}@media screen and (max-width:600px){td[class=logo] img{margin:0 auto!important}table[class=wrapper]{width:100%!important}td[class=mobile-image-pad]{padding:0 10px!important}td[class=mobile-title-pad]{padding:30px 10px 0!important}td[class=mobile-text-pad]{padding:10px!important}td[class=mobile-column-right]{padding-top:20px!important}img[class=fluid-image]{height:auto!important;width:100%!important}td[class=hide]{display:none!important}}
